# esp32c6-semla

./: Cargo.toml  README.md  build.rs  partitions.csv
.cargo/: config.toml
src/: network.rs  storage.rs
