[package]
edition      = "2024"
name         = "esp32c6-semla"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "semla"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name    = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32c6", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "log-04",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6"] }

embassy-futures = { version = "0.1.2", features = ["log"] }
embassy-net = { version = "0.8", features = [
  "log",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "proto-ipv4",
  "dns",
] }
embedded-hal-async = { version = "1.0" }
embedded-io = { version = "0.7.1" }
embedded-io-async = { version = "0.7.0" }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4"
esp-alloc = { version = "0.9.0" }
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-sync = { version = "0.7.2", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-backtrace = { version = "0.18.1", features = [
  "esp32c6",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32c6", "log-04"] }
esp-radio = { version = "0.17.0", features = [
  "log-04",
  "esp-alloc",
  "esp32c6",
  "wifi",
] }
esp-storage = { version = "0.8", features = ["esp32c6"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
embedded-graphics = "0.8.1"
u8g2-fonts = "0.7.2"
sntpc = { version = "0.8", default-features = false, features = ["log"] }
sntpc-net-embassy = { version = "0.8", default-features = false }
jiff = { version = "0.2", default-features = false, features = ["static", "serde"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
efmt = { git = "https://github.com/dragonnn/efmt.git", branch = "main" , features = ["heapless09"] }
heapless = "0.9"
sequential-storage = { version = "7.0.1", features = ["alloc"] }
embassy-embedded-hal = "0.5.0"
ssd1675 = { path = "../ssd1675" }
log                    = "0.4.27"

[dev-dependencies]
embedded-test = { version = "0.7.0", features = [
  "log",
  "embassy",
  "external-executor",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
